Changes from 1.5beta1: ---------------------------------

- BUG FIX (read.c, parseNrrd.c): when doing detached headers
and io->skipData, io->dir won't be set (won't know directory
of header), but that's not an error. _nrrdReadNrrdParse_data_file
no longer complains in this case.  Also, the io->dataFile is
not airFclosed if io->skipdata after the data has (not) been
read if io->skipData.

Changes from 1.5beta0: ---------------------------------

- BUG FIX (apply1D.c): in setting colSize for 1D maps, when output
type and map type are different sizes
- API CHANGE (nrrd.h, map.c): nrrdHistoEq() now takes a new final
argument, "amount", which tell the extent to which the equalizing
correction should be applied.
- API CHANGE (simple.c, write.c): 3D grayscale images
(dimensions=(1,X,Y)) now "fit" in PGM, and are silently reshaped on
write
- API CHANGE (simple.c): nrrdPeripheralInit() and nrrdPeripheralCopy()
now return an int instead of void.
- API NEW (nrrd.h, defaultsNrrd.c): added nrrdStateGrayscaleImage3D,
which causes reshape of grayscale images to 3D (1,X,Y) on read
- API NEW (nrrd.h, methodsNrrd.c): nrrdKernelSpecSet() and
nrrdKernelParmSet() are ways of setting a kernel/parm pair and a
nrrdKernelSpec from one another

Changes from 1.4: ----------------------------------------

nrrd.h (and nrrd as a whole):
- API CHANGE: the evalN_f and evalN_d methods of NrrdKernel
now use size_t to indicate how many samples to evaluate,
instead of int.
- API CHANGE: there is no more nrrdBigInt.  It was stupid.
It should have been size_t all along, because the way I was
using nrrdBigInt is exactly the way that size_t is intended 
to be used.  Basically, all functions that linearly iterate
through all elements of a nrrd use a variable of type size_t.
On 32-bit architectures, using size_t means you use an
unsigned int instead of an unsigned long long int, which is
probably faster.  Associated with this is the demise of
NRRD_BIG_INT_PRINTF; its usage is replaced by AIR_SIZE_T_FMT